--- a/app/src/main/res/layout/hh_list.xml
+++ b/app/src/main/res/layout/hh_list.xml
@@ -9,6 +9,7 @@
         <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
         <TextView android:id="@+id/lblHeading" android:text="নতুন খানার তালিকা"  android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
     </LinearLayout>
+
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
 
 
@@ -29,10 +30,10 @@
 
             <LinearLayout android:id="@+id/secVill" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
                 <!--<TextView android:id="@+id/lblVill" android:text="" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />-->
-                <TextView android:id="@+id/VlblVill" android:text="খানা" android:layout_width="137sp" android:layout_height="wrap_content" android:textSize="20sp" />
-                <EditText android:id="@+id/txtVill" android:maxLength="3" android:layout_width="100sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
-                <EditText android:id="@+id/txtBari" android:maxLength="4" android:layout_width="100sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
-                <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="100sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
+                <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="137sp" android:layout_height="wrap_content" android:textSize="20sp" />
+                <EditText android:id="@+id/txtVill" android:maxLength="3" android:layout_width="80sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
+                <EditText android:id="@+id/txtBari" android:maxLength="4" android:layout_width="80sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
+                <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="80sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
 
             </LinearLayout>
 
@@ -63,14 +64,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="0sp"
                     android:gravity="top|left"
-                    android:inputType="textMultiLine"
+                    android:inputType="textMultiLine|textCapWords"
                     android:maxLength="20"
                     android:minHeight="40sp"
                     android:textSize="20sp" />
             </LinearLayout>
 
             <View
-                android:id="@+id/lineH222"
+                android:id="@+id/lineH222" android:layout_marginTop="20sp"
                 android:layout_width="fill_parent"
                 android:layout_height="1dip"
                 android:background="#CCCCCC" />
