--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -73,8 +73,7 @@
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
 
 
-    <LinearLayout android:id="@+id/secHHMenu" android:layout_weight="3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0"
-        android:weightSum="1">
+    <LinearLayout android:id="@+id/secHHMenu" android:layout_weight="3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
 
         <Button android:id="@+id/cmdHHList" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
             android:layout_width="wrap_content"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="খানার তালিকা তৈরি"
@@ -140,7 +139,7 @@
              <ListView android:scrollbars="vertical"
                   android:id="@+id/lstData"
                   android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
+                  android:layout_height="550sp"
                   android:divider="#000000"
                   android:dividerHeight="1px"
                   android:clickable="true">
