--- a/app/src/main/res/layout/hh_list.xml
+++ b/app/src/main/res/layout/hh_list.xml
@@ -11,9 +11,15 @@
     </LinearLayout>
 
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:gravity="center" android:background="#ffffff">
+        <ImageView android:layout_marginLeft="20sp"
+            android:layout_width="40sp"
+            android:layout_height="40sp" android:src="@drawable/home" />
+        <TextView  android:text="  খানার তালিকা তৈরি"  android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal" android:textSize="25sp" android:textColor="#006699"/>
+    </LinearLayout>
+    <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
 
-
-    <ScrollView
+    <ScrollView android:layout_marginTop="10sp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:isScrollContainer="true"
