--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -109,6 +109,10 @@
             android:textAlignment="center"
             android:gravity="left" android:paddingTop="5sp" android:paddingBottom="5sp"
             android:background="@color/tableHeading">
+            <TextView
+                android:text=""
+                android:layout_width="50sp"
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:text=" খানা #"
@@ -119,7 +123,7 @@
 
             <TextView
                 android:text="খানা প্রধান"
-                android:layout_width="300sp"
+                android:layout_width="250sp"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvListHeadingName"
                 android:textColor="@android:color/black"/>
