--- a/app/src/main/res/layout/member_name.xml
+++ b/app/src/main/res/layout/member_name.xml
@@ -9,6 +9,13 @@
         <TextView android:id="@+id/lblHeading" android:text="সদস্যের নাম"  android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:gravity="center" android:background="#ffffff">
+        <ImageView android:layout_marginLeft="20sp"
+            android:layout_width="40sp"
+            android:layout_height="40sp" android:src="@drawable/member" />
+        <TextView  android:text="  সদস্যের নামের তালিকা তৈরি"  android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal" android:textSize="25sp" android:textColor="#006699"/>
+    </LinearLayout>
+    <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
 
     <ScrollView
         android:layout_width="fill_parent"
