--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -15,8 +15,8 @@
         <EditText android:id="@+id/txtBari" android:maxLength="4" android:layout_width="60sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
         <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="50sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="20sp" android:textSize="20sp" />
 
-        <TextView android:id="@+id/VlblBariName" android:text="Bari" android:layout_column="0" android:layout_width="50sp" android:textSize="20sp" android:layout_height="wrap_content"/>
-        <TextView android:id="@+id/lblBariName" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"/>
+        <TextView android:id="@+id/VlblHHHead" android:text="খানা প্রধান" android:layout_column="0" android:layout_width="100sp" android:textSize="20sp" android:layout_height="wrap_content"/>
+        <TextView android:id="@+id/lblHHHead" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"/>
 
     </LinearLayout>
     <View android:id="@+id/lineVill" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
