--- a/app/src/main/res/layout/form_heading.xml
+++ b/app/src/main/res/layout/form_heading.xml
@@ -19,16 +19,17 @@
         android:visibility="visible">
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300sp"
+            android:layout_height="60sp"
             android:gravity="center"
             android:paddingLeft="10px"
             android:paddingRight="10px"
-            android:scaleType="center"
+            android:scaleType="centerInside"
             android:src="@drawable/logo"
             android:text="@string/app_name"
             android:textColor="#FF0000"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:adjustViewBounds="true" />
     </LinearLayout>
 
     <LinearLayout
