--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -12,24 +12,6 @@
     </LinearLayout>
 
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
-        <TextView
-            android:layout_height="wrap_content" android:layout_width="100sp"
-            android:gravity="left"
-            android:text="ইউনিয়ন"
-            android:textColor="#000000"
-            android:textSize="18sp"/>
-
-        <Spinner
-            android:id="@+id/spnUnion"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:drawSelectorOnTop="true"
-            android:prompt="@string/planet_prompt"
-            android:spinnerMode="dialog"
-            android:textSize="25sp" />
-    </LinearLayout>
-    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView
@@ -80,11 +62,11 @@
 
     <LinearLayout android:id="@+id/secHHMenu" android:layout_weight="3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
 
-        <Button android:id="@+id/cmdHHList" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
+        <Button android:id="@+id/cmdHHList" android:visibility="gone"  android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
             android:layout_width="wrap_content"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="খানার তালিকা তৈরি"
             android:layout_weight="1" />
 
-        <Button android:id="@+id/cmdHH" android:visibility="gone" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
+        <Button android:id="@+id/cmdHH" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
             android:layout_width="match_parent"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="নতুন খানা নিবন্ধন"
             android:layout_weight="0.50" />
 
