--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="nav_header_vertical_spacing">5dp</dimen>
     <dimen name="nav_header_height">120dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--Heading Height -->
+    <dimen name="heading_height">55dp</dimen>
 </resources>
